# EmbeddedSTM32_Rust

./: .gitignore  README.md
fibo/: Cargo.toml
fibo/src/: main.rs
problems/src/: main.rs
tp-led-matrix/: Cargo.toml  jlink.gdb
tp-led-matrix/.cargo/: config.toml
tp-led-matrix/src/: embedded.rs  image.rs  lib.rs  main.rs  matrix.rs
tp-rust-2/: Cargo.toml
tp-rust-2/src/: machine.rs  main.rs
tp-rust-2/tests/: assignment.rs  basic_operations.rs  complex_execution.rs
